--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body{
-        font-family: 'Epilogue', sans-serif;
-        font-family: 'Lato', sans-serif;
+        
         font-family: 'Poppins', sans-serif;
+        margin: 0;
+}
+.top-banner{
+    background-image: url(./images/top-banner.png);
+    background-repeat: no-repeat;
 }
 h1{
     font-size: 50px;
@@ -11,6 +15,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
     
 }
 .half-width{
@@ -31,4 +36,9 @@ section{
    color: white;
    
    
+}
+.big-dream{
+    background-image: url(./images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
